# better-notes

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  deny.toml  flake.nix  rust-toolchain.toml
docs/development/: architecture.md  context.md  requirements.md
nix/: formatter.nix
nix/devshells/: default.nix  rust.nix
nix/lib/: default.nix
rust/cli/: Cargo.toml
rust/cli/src/: conversation.rs  forge.rs  git.rs  lib.rs  main.rs  output.rs  pr.rs  summary.rs
