[workspace]
resolver = "2"
package.version = "0.1.0"
package.license = "GPL-3.0-only"
metadata.crane.name = "better-notes"

members = ["rust/*"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
walkdir = "2"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
